flex/flex-tests/testData/flex_highlighting/RefsInEmbed.css
.h1 {
  property: Embed(source="<error descr="Cannot resolve file 'logo.png'">logo.png</error>");
  property2: Embed(source="/RefsInEmbed.as");
}